fixed kernel card tools overflowing on other cards
+ other minor changes

--- a/AlanWalkerTheme/userSetting.css
+++ b/AlanWalkerTheme/userSetting.css
@@ -18,7 +18,8 @@
   min-height: 100%;
   min-width: 460px;
 }
-.bd-addon-card {
+.bdcompat-addon-panel-list .bd-addon-card,
+.bd-addon-list .bd-addon-card {
   border: 1px solid rgb(var(--border-color-1), var(--border-opacity-1));
   border-radius: 10px !important;
 }
@@ -80,7 +81,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 5px;
 }
 #app-mount .kernel-card-scroller .kernel-card {
   margin: 0;
@@ -99,7 +100,6 @@
 .bd-addon-card .bd-addoncard-header .bd-addoncard-info + .container-2nx-BQ {
   flex: 0 0 40px;
 }
-#app-mount .kernel-card .kernel-card-tools,
 #app-mount .kernel-card,
 #app-mount .holy-card-container {
   border: 1px solid rgb(var(--border-color-1), var(--border-opacity-1));
@@ -123,6 +123,13 @@
 #app-mount .kernel-card .kernel-card-header,
 #app-mount .holy-card-container .holy-card-header {
   background: var(--background-secondary-alt);
+}
+#app-mount .kernel-card .kernel-card-tools {
+  top: 0;
+  right: 0;
+  padding: 3px;
+  background-color: transparent;
+  border: 0;
 }
 #app-mount .holy-card-container .holy-card-description {
   background: none;
